Fixed background image to stretch and not repeat
touched up login

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -3,8 +3,8 @@
   
   min-width: 100%;
   min-height: 100%;
-  background-image: url("/assets/bg_login_png.png");
-  background-size: 100%;
+  background-image: url("/assets/bg_login_png.png") ;
+  background-size: cover;
 }
 /* .title{
     
